--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     <!--Poppins font      -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    
+  
   <link rel="stylesheet" href="styles.css">
   <title> Oasis Apartments </title>
 </head>
